--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.3.0
       - id: Init
         run: terraform init -no-color
       - id: Fmt
